--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -8,15 +8,20 @@
 <body>
   <h1>Dynamic Quote Generator</h1>
 
+  <!-- Placeholder for displaying quotes -->
   <div id="quoteDisplay"></div>
+
+  <!-- Button to show a new random quote -->
   <button id="newQuote">Show New Quote</button>
 
+  <!-- Inputs to add a new quote -->
   <div>
     <input id="newQuoteText" type="text" placeholder="Enter a new quote" />
     <input id="newQuoteCategory" type="text" placeholder="Enter quote category" />
     <button onclick="addQuote()">Add Quote</button>
   </div>
 
+  <!-- Link to the JavaScript file -->
   <script src="script.js"></script>
 </body>
 </html>
