--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -8,7 +8,7 @@
 <body>
   <h1>Dynamic Quote Generator</h1>
 
-  <!-- Placeholder for displaying quotes -->
+  <!-- Placeholder for quotes -->
   <div id="quoteDisplay"></div>
 
   <!-- Button to show a new random quote -->
@@ -21,7 +21,6 @@
     <button onclick="addQuote()">Add Quote</button>
   </div>
 
-  <!-- Link to the JavaScript file -->
   <script src="script.js"></script>
 </body>
 </html>
