--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -8,10 +8,13 @@
 <body>
   <h1>Dynamic Quote Generator</h1>
 
+  <!-- Display area for quotes -->
   <div id="quoteDisplay"></div>
 
+  <!-- Button to show a new random quote -->
   <button id="newQuote">Show New Quote</button>
 
+  <!-- Form to add a new quote -->
   <div>
     <input id="newQuoteText" type="text" placeholder="Enter a new quote" />
     <input id="newQuoteCategory" type="text" placeholder="Enter quote category" />
