--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -1,23 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dynamic Quote Generator</title>
+    <title>Quote Generator</title>
 </head>
 <body>
-  <h1>Dynamic Quote Generator</h1>
-
-  <div id="quoteDisplay"></div>
-
-  <button id="newQuote">Show New Quote</button>
-
-  <div>
-    <input id="newQuoteText" type="text" placeholder="Enter a new quote">
-    <input id="newQuoteCategory" type="text" placeholder="Enter quote category">
+    <div id="quoteDisplay"></div>
+    <button id="newQuote">Show New Quote</button>
+    
+    <input type="text" id="newQuoteText" placeholder="Enter quote text">
+    <input type="text" id="newQuoteCategory" placeholder="Enter category">
     <button onclick="addQuote()">Add Quote</button>
-  </div>
-
-  <script src="script.js"></script>
+    
+    <script src="script.js"></script>
 </body>
 </html>
