--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -8,6 +8,14 @@
 <body>
   <h1>Dynamic Quote Generator</h1>
 
+  <div>
+    <label for="categoryFilter">Filter by Category:</label>
+    <select id="categoryFilter" onchange="filterQuotes()">
+      <option value="all">All Categories</option>
+      <!-- Categories populated dynamically -->
+    </select>
+  </div>
+
   <div id="quoteDisplay"></div>
 
   <button id="newQuote">Show New Quote</button>
